Working on spinner sort implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="next_page_button_string">Next Page</string>
 
     <string-array name="class_list">
+        <item>""</item>
         <item>Barbarian</item>
         <item>Bard</item>
         <item>Cleric</item>
