--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,6 @@
     <string name="d100_string">1d100</string>
     <string name="title_activity_spell_book">SpellBookActivity</string>
     <string name="spellbook_sort_text">Search:</string>
+    <string name="title_activity_saved_character">SavedCharacterActivity</string>
 
 </resources>
